refactor(测试计划): 优化高级搜索部分字段SQL查询
--task=1016645 --user=宋昌昌 【接口测试】接口文档-后端 https://www.tapd.cn/55049933/s/1591755